--- a/views/webUI/index.ejs
+++ b/views/webUI/index.ejs
@@ -15,10 +15,10 @@
 								<h1 class="mb-4 mb-md-0 mb-xl-3" data-plugin-float-element data-plugin-options="{'startPos': 'none', 'speed': 1, 'transition': true, 'horizontal': false}">İşletmeniz için bir <strong> website </strong> ile müşterilerinizin sizi bulmasına yardımcı olun</h1>
 							</div>
 							<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
-								<p class="text-4 mb-5 mb-md-2" data-plugin-float-element data-plugin-options="{'startPos': 'none', 'speed': 0.5, 'transition': true, 'horizontal': false}">Ücretsiz web sitesi denemenizi bugün başlatın, website yönetiminin kolaylılarını bizimle görün. Kredi kartına gerek yok.</p>
+								<p class="text-4 mb-5 mb-md-2" data-plugin-float-element data-plugin-options="{'startPos': 'none', 'speed': 0.5, 'transition': true, 'horizontal': false}">Ücretsiz web sitesi denemenizi bugün başlatın, website yönetiminin kolaylıklarını bizimle görün. Kredi kartına gerek yok.</p>
 							</div>
 							<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">
-								<a data-hash data-hash-offset="95" href="#contact" class="btn btn-primary btn-outline btn-rounded font-weight-semibold text-4 btn-px-5 btn-py-2" data-plugin-float-element data-plugin-options="{'startPos': 'none', 'speed': 0.3, 'transition': true, 'horizontal': false}">Şimdi Başla</a>
+								<a data-hash data-hash-offset="95" href="#now_start" class="btn btn-primary btn-outline btn-rounded font-weight-semibold text-4 btn-px-5 btn-py-2" data-plugin-float-element data-plugin-options="{'startPos': 'none', 'speed': 0.3, 'transition': true, 'horizontal': false}">Şimdi Başla</a>
 							</div>
 						</div>
 						<div class="col-lg-6 text-center mt-5 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="550">
@@ -239,47 +239,12 @@
 							</article>
 						</div>
 					</div>
-					<div class="row mt-5">
+					<div class="row mt-5" id="now_start">
 						<div class="col text-center">
 							<a href="demo-seo-blog.html" class="btn btn-primary btn-outline btn-rounded font-weight-semibold text-4 btn-px-5 btn-py-2">Tümünü Gör</a>
 						</div>
 					</div>
 				</div>
-
-				<section class="section border-0 m-0">
-					<div class="container">
-						<div class="row">
-							<div class="col">
-								<div class="owl-carousel owl-theme carousel-center-active-item mb-0" data-plugin-options="{'responsive': {'0': {'items': 1}, '476': {'items': 1}, '768': {'items': 5}, '992': {'items': 5}, '1200': {'items': 5}}, 'autoplay': true, 'autoplayTimeout': 3000, 'stagePadding': 0, 'dots': false, 'nav': false}">
-									<div class="px-3">
-										<img class="img-fluid" src="ui/img/logos/logo-1.png" alt="">
-									</div>
-									<div class="px-3">
-										<img class="img-fluid" src="ui/img/logos/logo-2.png" alt="">
-									</div>
-									<div class="px-3">
-										<img class="img-fluid" src="ui/img/logos/logo-3.png" alt="">
-									</div>
-									<div class="px-3">
-										<img class="img-fluid" src="ui/img/logos/logo-4.png" alt="">
-									</div>
-									<div class="px-3">
-										<img class="img-fluid" src="ui/img/logos/logo-5.png" alt="">
-									</div>
-									<div class="px-3">
-										<img class="img-fluid" src="ui/img/logos/logo-6.png" alt="">
-									</div>
-									<div class="px-3">
-										<img class="img-fluid" src="ui/img/logos/logo-4.png" alt="">
-									</div>
-									<div class="px-3">
-										<img class="img-fluid" src="ui/img/logos/logo-2.png" alt="">
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
 
 				<section class="section bg-primary border-0 m-0">
 					<div class="container">
