call number edit

--- a/views/webUI/index.ejs
+++ b/views/webUI/index.ejs
@@ -259,7 +259,7 @@
 									</div>
 									<div class="feature-box-info pl-1">
 										<label class="d-block text-color-light line-height-2 opacity-8 mb-1">BİZİ ARAYIN</label>
-										<strong class="font-weight-normal text-6"><a href="tel:8001234567" class="text-color-light">0(551) 647-4747</a></strong>
+										<strong class="font-weight-normal text-6"><a href="tel:+905516474793" class="text-color-light">0551 647 47 93</a></strong>
 									</div>
 								</div>
 							</div>
@@ -270,7 +270,7 @@
 									</div>
 									<div class="feature-box-info pl-1">
 										<label class="d-block text-color-light line-height-2 opacity-8 mb-1">BİZE MAİL GÖNDERİN</label>
-										<strong class="font-weight-normal text-6"><a href="mailto:mail@example.com" class="text-color-light">info@abakusyazilim.com</a></strong>
+										<strong class="font-weight-normal text-6"><a href="mailto:info@abakusyazilim.com" class="text-color-light">info@abakusyazilim.com</a></strong>
 									</div>
 								</div>
 							</div>
@@ -322,3 +322,5 @@
 					</div>
 
 				</form>
+
+                
