--- a/views/webUI/layout.ejs
+++ b/views/webUI/layout.ejs
@@ -109,7 +109,7 @@
 											<i class="fas fa-bars"></i>
 										</button>
 									</div>
-									<a class="btn btn-primary btn-rounded font-weight-semibold text-3 btn-px-5 btn-py-2 order-1 order-lg-2 d-none d-md-block mr-3 mr-lg-0" data-hash data-hash-offset="65" href="https://wa.me/+905079600415" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+									<a class="btn btn-primary btn-rounded font-weight-semibold text-3 btn-px-5 btn-py-2 order-1 order-lg-2 d-none d-md-block mr-3 mr-lg-0" data-hash data-hash-offset="65" href="https://wa.me/+905516474793" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
 								</div>
 							</div>
 						</div>
@@ -139,7 +139,7 @@
 								<li class="d-flex align-items-baseline"><i class="far fa-dot-circle text-color-primary mr-3"></i>
 									<div><span class="text-color-light">Adres:</span> İzmir</div></li>
 								<li class="d-flex align-items-baseline"><i class="fab fa-whatsapp text-color-primary mr-3"></i>
-									<div><span class="text-color-light">Tel:</span> 0(541) 647-4747</div></li>
+									<div><span class="text-color-light">Tel:</span> 0541 647 47 93</div></li>
 								<li class="d-flex align-items-baseline"><i class="far fa-envelope text-color-primary mr-3"></i>
 									<div><span class="text-color-light">Email:</span> <a href="mailto:mail@example.com">info@abakusyazilim.com</a></div></li>
 							</ul>
