--- a/views/webUI/index.ejs
+++ b/views/webUI/index.ejs
@@ -36,13 +36,13 @@
                                 </h2>
 							</div>
 							<div class="col-lg-8">
-								<form class="custom-form-style-1" method="post">
+								<form id="url_form" class="custom-form-style-1" action="/url-kayit" method="post">
 									<div class="form-row">
 										<div class="form-group col-lg-5 mb-lg-0 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1200">
-											<input type="text" class="form-control" value="" placeholder="Website URL*" required>
+											<input type="text" class="form-control" name="url" placeholder="Website URL*" required>
 										</div>
 										<div class="form-group col-lg-4 mb-lg-0 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1400">
-											<input type="email" class="form-control" value="" placeholder="Email*" required>
+											<input type="email" class="form-control" name="email" placeholder="Email*" required>
 										</div>
 										<div class="form-group col-lg-3 mb-lg-0 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="1600">
 											<input type="submit" class="btn btn-primary btn-outline font-weight-bold text-3 h-100 rounded-0 btn-px-4" value="Gönder">
@@ -57,12 +57,7 @@
 				<div class="container py-5 my-4" id="about">
 					<div class="row align-items-center">
 						<div class="col-lg-5 mb-4 mb-md-5 mb-lg-0">
-							<div class="featured-boxes featured-boxes-modern-style-1 custom-image-position-1 d-none d-lg-block appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200" data-plugin-options="{'accY': -400}">
-								<div class="featured-box py-3">
-									<div class="featured-box-background" style="background-image: url(ui/img/demos/seo/generic-1.jpg); background-size: cover; background-position: center;"></div>
-									<div class="box-content px-lg-4 px-xl-5 py-lg-5 m-5"></div>
-								</div>
-							</div>
+							
 							<div class="featured-boxes featured-boxes-modern-style-1 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="400" data-plugin-options="{'accY': -400}">
 								<div class="featured-box py-5">
 									<div class="featured-box-background" style="background-image: url(ui/img/demos/seo/generic-2.jpg); background-size: cover; background-position: center;"></div>
@@ -130,7 +125,7 @@
 					</div>
 					<div class="row mt-5">
 						<div class="col text-center">
-							<a href="#demo-form" class="btn btn-primary btn-outline btn-rounded popup-with-form font-weight-semibold text-4 btn-px-5 btn-py-2">Teklif Alın</a>
+							<a href="#offer_save" class="btn btn-primary btn-outline btn-rounded popup-with-form font-weight-semibold text-4 btn-px-5 btn-py-2">Teklif Alın</a>
 						</div>
 					</div>
 				</div>
@@ -275,14 +270,14 @@
 								</div>
 							</div>
 							<div class="col-auto">
-								<a href="#demo-form" class="btn btn-light btn-rounded popup-with-form text-color-primary font-weight-semibold text-4 btn-px-5 py-3">Teklif Alın</a>
+								<a href="#offer_save" class="btn btn-light btn-rounded popup-with-form text-color-primary font-weight-semibold text-4 btn-px-5 py-3">Teklif Alın</a>
 							</div>
 						</div>
 					</div>
 				</section>
 
 				<!-- Form -->
-				<form id="demo-form" class="contact-form white-popup-block mfp-hide" action="php/contact-form.php" method="POST">
+				<form id="offer_save" class="contact-form white-popup-block mfp-hide" action="/teklif-kayit" method="POST">
 					<div class="form-row mt-2">
 						<div class="col-sm-12">
 							<h2 class="font-weight-bold text-center text-7 mb-4">Teklif Formu</h2>
@@ -306,12 +301,17 @@
 						</div>
 						<div class="form-row">
 							<div class="form-group col mb-2">
-								<input type="email" name="Email" class="form-control" value="" placeholder="Email*" data-msg-required="Lütfen email adresi giriniz." data-msg-email="Lütfen email adresi giriniz." maxlength="100" required>
+								<input type="email" name="email" class="form-control" value="" placeholder="Email*" data-msg-required="Lütfen email adresi giriniz." data-msg-email="Lütfen email adresi giriniz." maxlength="100" required>
 							</div>
 						</div>
 						<div class="form-row">
 							<div class="form-group col mb-2">
-								<textarea name="Description" class="form-control" style="overflow: hidden; height: 100px;" rows="20" value="" placeholder="Açıklama*" data-msg-required="Lütfen açıklama giriniz." data-msg-email="Lütfen açıklama giriniz." maxlength="100" required></textarea>
+								<input type="text" name="phone" class="form-control" value="" placeholder="Telefon" maxlength="15" />
+							</div>
+						</div>
+						<div class="form-row">
+							<div class="form-group col mb-2">
+								<textarea name="description" class="form-control" style="overflow: hidden; height: 100px;" rows="20" value="" placeholder="Açıklama*" data-msg-required="Lütfen açıklama giriniz." data-msg-email="Lütfen açıklama giriniz." maxlength="100" required></textarea>
 							</div>
 						</div>
 						<div class="form-row">
@@ -323,4 +323,20 @@
 
 				</form>
 
+
+				<div class="modal fade" id="result_modal" tabindex="-1" role="dialog" aria-labelledby="defaultModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-body" style="padding: 0;">
+								<div id="result_content" class="alert" style="margin: 0;">
+									<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+									<span>
+										
+									</span>
+								</div>
+								
+							</div>
+						</div>
+					</div>
+				</div>
                 
