--- a/views/webUI/index.ejs
+++ b/views/webUI/index.ejs
@@ -60,11 +60,9 @@
 							
 							<div class="featured-boxes featured-boxes-modern-style-1 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="400" data-plugin-options="{'accY': -400}">
 								<div class="featured-box py-5">
-									<div class="featured-box-background" style="background-image: url(ui/img/demos/seo/generic-2.jpg); background-size: cover; background-position: center;"></div>
+									<div class="featured-box-background" style="background-image: url(ui/img/person-keyboard.jpg); background-size: cover; background-position: center;"></div>
 									<div class="box-content px-lg-4 px-xl-5 py-lg-5 m-5">
-										<a class="text-decoration-none lightbox" href="https://vimeo.com/45830194" data-plugin-options="{'type':'iframe'}">
-											<i class="fas fa-play featured-icon featured-icon-style-2 featured-icon-hover-effect-1 text-color-dark bg-light right-4 top-0 m-0 appear-animation" data-appear-animation="expandIn" data-appear-animation-delay="1200"></i>
-										</a>
+										
 									</div>
 								</div>
 							</div>
@@ -134,36 +132,36 @@
 					<div class="container">
 						<div class="row align-items-center">
 							<div class="col-lg-6 col-xl-8 mb-5 mb-lg-0">
-								<h2 class="text-color-light line-height-3 text-10 mb-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200"><strong>Improve your seo ranking with porto</strong><br> Best SEO Features & Methodologies. Better SEO than your competitors</h2>
+								<h2 class="text-color-light line-height-3 text-10 mb-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200"><strong>Seo sıralamanızı Abaküs ile iyileştirin</strong><br> En İyi Seo Özellikleri ve Metodolojileri <br /> Rakiplerinizden daha iyi SEO</h2>
 							</div>
 							<div class="col-lg-6 col-xl-4">
 								<div class="card appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="400">
 									<div class="cad-body p-5">
-										<h2 class="font-weight-bold text-center text-7 mb-4">Free Seo Analysis</h2>
-										<form class="custom-form-style-1 custom-form-style-1-rounded" method="post">
+										<h2 class="font-weight-bold text-center text-7 mb-4">Ücretsiz Seo Analizi</h2>
+										<form id="free_seo_form" action="/seo-analiz" class="custom-form-style-1 custom-form-style-1-rounded" method="post">
 											<div class="form-row">
 												<div class="form-group col mb-2">
-													<input type="text" class="form-control" value="" placeholder="NAME*" required>
+													<input type="text" class="form-control" value="" placeholder="İsim ve Soyisim*" required>
 												</div>
 											</div>
 											<div class="form-row">
 												<div class="form-group col mb-2">
-													<input type="email" class="form-control" value="" placeholder="EMAIL*" required>
+													<input type="email" class="form-control" value="" placeholder="Email*" required>
 												</div>
 											</div>
 											<div class="form-row">
 												<div class="form-group col mb-2">
-													<input type="text" class="form-control" value="" placeholder="WEBSITE*" required>
+													<input type="text" class="form-control" value="" placeholder="Website*" required>
 												</div>
 											</div>
 											<div class="form-row">
 												<div class="form-group col">
-													<input type="text" class="form-control" value="" placeholder="COMPANY NAME*" required>
+													<input type="text" class="form-control" value="" placeholder="Şirket İsmi" />
 												</div>
 											</div>
 											<div class="form-row">
 												<div class="form-group col mb-0">
-													<input type="submit" class="btn btn-primary btn-outline btn-rounded font-weight-semibold text-center text-4 btn-py-2 w-100 mb-3" value="Get Free Report">
+													<input type="submit" class="btn btn-primary btn-outline btn-rounded font-weight-semibold text-center text-4 btn-py-2 w-100 mb-3" value="Gönder">
 												</div>
 											</div>
 										</form>
