2 blog sayfaları eklendi

--- a/views/webUI/index.ejs
+++ b/views/webUI/index.ejs
@@ -182,36 +182,38 @@
 					<div class="row">
 						<div class="col-md-4 mb-5 mb-md-0">
 							<article>
-								<a href="demo-seo-blog-post.html" class="text-decoration-none">
+								<a href="/web-sitesi-nedir" class="text-decoration-none">
 									<span class="thumb-info thumb-info-no-borders custom-thumb-info-style-1 pb-2 mb-2 mb-md-4">
 										<span class="thumb-info-wrapper">
 											<img src="ui/img/demos/seo/blog/blog-1.jpg" class="img-fluid" alt="">
 											<span class="custom-thumb-info-date text-color-light bg-primary">
-												28
-												<span>APR</span>
+												27
+												<span>ŞUB</span>
 											</span>
 										</span>
 									</span>
 								</a>
-								<h2 class="font-weight-semibold custom-fs-1 line-height-3 ls-0 mb-2"><a href="demo-seo-blog-post.html" class="text-color-dark text-decoration-none">You can now automatically set your browser history to be deleted</a></h2>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi facilisis, tortor vel euismod elementum, sapien risus...</p>
+								<h2 class="font-weight-semibold custom-fs-1 line-height-3 ls-0 mb-2"><a href="/web-sitesi-nedir" class="text-color-dark text-decoration-none">Web Yazılımı Nedir?</a></h2>
+								<p class="mb-0">Web yazılımı, web sitelerinin oluşturulması, yönetimi, ve güncellenmesinde kullanılan yazılım araçlarına verilen isimdir. Bu araçlar, web sitesinin tasa...</p>
 							</article>
 						</div>
 						<div class="col-md-4 mb-5 mb-md-0">
 							<article>
-								<a href="demo-seo-blog-post.html" class="text-decoration-none">
+								<a href="/seo-yapilanmasi-web-sitesi-icin-en-iyi-pratikler" class="text-decoration-none">
 									<span class="thumb-info thumb-info-no-borders custom-thumb-info-style-1 pb-2 mb-2 mb-md-4">
 										<span class="thumb-info-wrapper">
 											<img src="ui/img/demos/seo/blog/blog-2.jpg" class="img-fluid" alt="">
 											<span class="custom-thumb-info-date text-color-light bg-primary">
-												22
-												<span>APR</span>
+												20
+												<span>MAR</span>
 											</span>
 										</span>
 									</span>
 								</a>
-								<h2 class="font-weight-semibold custom-fs-1 line-height-3 ls-0 mb-2"><a href="demo-seo-blog-post.html" class="text-color-dark text-decoration-none">10 SEO best practices you should be doing right now</a></h2>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi facilisis, tortor vel euismod elementum, sapien risus...</p>
+								<h2 class="font-weight-semibold custom-fs-1 line-height-3 ls-0 mb-2"><a href="/seo-yapilanmasi-web-sitesi-icin-en-iyi-pratikler" class="text-color-dark text-decoration-none">SEO Yapılanması: Web Sitesi İçin En İyi Pratikler</a></h2>
+								<p class="mb-0">
+									SEO (Arama Motoru Optimizasyonu), web sitelerinin arama motorları tarafından daha kolay bulunmasını ve daha...
+								</p>
 							</article>
 						</div>
 						<div class="col-md-4">
